{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 644,
  "lineage": "84847b93-18b9-a303-b714-678f7d46dedf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c06787c65606bd2",
            "domain": "vpc",
            "id": "eipalloc-06c06787c65606bd2",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-52-51-217.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.51.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tooling-app-eks-nat-eip",
              "iac_environment": "development"
            },
            "tags_all": {
              "Name": "tooling-app-eks-nat-eip",
              "iac_environment": "development"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:security-group/sg-0cd82e91220b0efcd",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0cd82e91220b0efcd",
            "ingress": [],
            "name": "tooling-app-eks-cluster-20231130095334983600000009",
            "name_prefix": "tooling-app-eks-cluster-",
            "owner_id": "982035331548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:security-group/sg-05a8979152229b093",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-05a8979152229b093",
            "ingress": [],
            "name": "tooling-app-eks-node-2023113009533532660000000a",
            "name_prefix": "tooling-app-eks-node-",
            "owner_id": "982035331548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tooling-app-eks": "owned"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tooling-app-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-339760604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd82e91220b0efcd",
            "security_group_rule_id": "sgr-0c5df16bc68e08081",
            "self": false,
            "source_security_group_id": "sg-05a8979152229b093",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2115265782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd82e91220b0efcd",
            "security_group_rule_id": "sgr-08948fc6c9d291658",
            "self": false,
            "source_security_group_id": "sg-05a8979152229b093",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1714425806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd82e91220b0efcd",
            "security_group_rule_id": "sgr-0811a003cb9ecc896",
            "self": false,
            "source_security_group_id": "sg-05a8979152229b093",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3310454102",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-0106bdcd3bac76c63",
            "self": false,
            "source_security_group_id": "sg-0cd82e91220b0efcd",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3648002612",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-06794db0be6cf0c8e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-112076586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-08e8a532b7530ba6f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2016412199",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-00b8e5d94f1f6cb1f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3038469984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-01f2f47121fa85790",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-998038790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-0f23852b9a5802d78",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3226886813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-00b274771b6c0c187",
            "self": false,
            "source_security_group_id": "sg-0cd82e91220b0efcd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-608341755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-008819dc69e938be2",
            "self": false,
            "source_security_group_id": "sg-0cd82e91220b0efcd",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2756094819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-07e82e6e94aa59d94",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1640588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05a8979152229b093",
            "security_group_rule_id": "sgr-0c734205eeb9ce486",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.self_managed_node_group[\"worker_group1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:security-group/sg-0677f884df1fd95e4",
            "description": "Self managed node group security group",
            "egress": [],
            "id": "sg-0677f884df1fd95e4",
            "ingress": [],
            "name": "tooling-app-eks-wg-node-group-2023113009533551040000000b",
            "name_prefix": "tooling-app-eks-wg-node-group-",
            "owner_id": "982035331548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-wg-node-group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-wg-node-group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:network-acl/acl-0ed687dfde7b0d3d5",
            "default_network_acl_id": "acl-0ed687dfde7b0d3d5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ed687dfde7b0d3d5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "982035331548",
            "subnet_ids": [
              "subnet-04e2fb81c30afb02f",
              "subnet-094073e2957ab63e3",
              "subnet-09dc956415cb68f6f",
              "subnet-0bd428414a9ab1b0e"
            ],
            "tags": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:route-table/rtb-0a6c3d7a553dfa02d",
            "default_route_table_id": "rtb-0a6c3d7a553dfa02d",
            "id": "rtb-0a6c3d7a553dfa02d",
            "owner_id": "982035331548",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:security-group/sg-08aa0b8fa9f782f7b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08aa0b8fa9f782f7b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "982035331548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:internet-gateway/igw-0c684cf5dcb5e9381",
            "id": "igw-0c684cf5dcb5e9381",
            "owner_id": "982035331548",
            "tags": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c06787c65606bd2",
            "association_id": "eipassoc-0e9b2d8e10b9efbe9",
            "connectivity_type": "public",
            "id": "nat-005b331bdbd6831b7",
            "network_interface_id": "eni-021d8d7642c6dd38d",
            "private_ip": "10.0.138.129",
            "public_ip": "13.52.51.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e2fb81c30afb02f",
            "tags": {
              "Name": "darey-io-eks-vpc-us-west-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-us-west-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw_elastic_ip",
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039db6b0f0b2f3f551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-005b331bdbd6831b7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039db6b0f0b2f3f55",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gw_elastic_ip",
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c684cf5dcb5e9381",
            "id": "r-rtb-0059dd0633d0a7e0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0059dd0633d0a7e0c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:route-table/rtb-039db6b0f0b2f3f55",
            "id": "rtb-039db6b0f0b2f3f55",
            "owner_id": "982035331548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darey-io-eks-vpc-private",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:route-table/rtb-0059dd0633d0a7e0c",
            "id": "rtb-0059dd0633d0a7e0c",
            "owner_id": "982035331548",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darey-io-eks-vpc-public",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e2f8a13e7398b3f",
            "route_table_id": "rtb-039db6b0f0b2f3f55",
            "subnet_id": "subnet-0bd428414a9ab1b0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f292d26985e64b0",
            "route_table_id": "rtb-039db6b0f0b2f3f55",
            "subnet_id": "subnet-094073e2957ab63e3"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c07eb871bdaf54f",
            "route_table_id": "rtb-0059dd0633d0a7e0c",
            "subnet_id": "subnet-04e2fb81c30afb02f"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b486d1f3777881e1",
            "route_table_id": "rtb-0059dd0633d0a7e0c",
            "subnet_id": "subnet-09dc956415cb68f6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:subnet/subnet-0bd428414a9ab1b0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd428414a9ab1b0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982035331548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-private-us-west-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private-us-west-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:subnet/subnet-094073e2957ab63e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094073e2957ab63e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982035331548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-private-us-west-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private-us-west-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:subnet/subnet-04e2fb81c30afb02f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e2fb81c30afb02f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982035331548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-public-us-west-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public-us-west-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:subnet/subnet-09dc956415cb68f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dc956415cb68f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982035331548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-public-us-west-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public-us-west-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0818a1c0a155452fc"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982035331548:vpc/vpc-0818a1c0a155452fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed687dfde7b0d3d5",
            "default_route_table_id": "rtb-0a6c3d7a553dfa02d",
            "default_security_group_id": "sg-08aa0b8fa9f782f7b",
            "dhcp_options_id": "dopt-0bf4a362bd9608dac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0818a1c0a155452fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6c3d7a553dfa02d",
            "owner_id": "982035331548",
            "tags": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}